// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders columns correctly with subaccounts 1`] = `
Array [
  Object {
    "label": "Name",
    "sortKey": "name",
    "width": "28%",
  },
  Object {
    "label": "Status",
    "sortKey": "published",
    "width": "18%",
  },
  Object {
    "label": "Subaccount",
    "sortKey": [Function],
    "width": "18%",
  },
  Object {
    "label": "Last Updated",
    "sortKey": "last_update_time",
  },
  null,
]
`;

exports[`renders correctly 1`] = `
<Page
  empty={
    Object {
      "content": <p>
        Build, test, preview and send your transmissions.
      </p>,
      "image": [Function],
      "show": false,
      "title": "Manage your email templates",
    }
  }
  primaryAction={
    Object {
      "Component": [Function],
      "content": "Create Template",
      "to": "/templates/create",
    }
  }
  title="Templates"
>
  <TableCollection
    columns={
      Array [
        Object {
          "label": "Name",
          "sortKey": "name",
          "width": "28%",
        },
        Object {
          "label": "Status",
          "sortKey": "published",
          "width": "18%",
        },
        Object {
          "label": "Last Updated",
          "sortKey": "last_update_time",
        },
        null,
      ]
    }
    defaultSortColumn="name"
    defaultSortDirection="asc"
    filterBox={
      Object {
        "exampleModifiers": Array [
          "id",
          "name",
        ],
        "itemToStringKeys": Array [
          "name",
          "id",
          "subaccount_id",
        ],
        "show": true,
      }
    }
    getRowData={[Function]}
    pagination={true}
    rows={
      Array [
        Object {
          "name": "Temp 1",
        },
        Object {
          "name": "Temp 2",
        },
      ]
    }
  />
</Page>
`;

exports[`renders empty state 1`] = `
<EmptyState
  image={[Function]}
  primaryAction={
    Object {
      "Component": [Function],
      "content": "Create Template",
      "to": "/templates/create",
    }
  }
  title="Manage your email templates"
>
  <p>
    Build, test, preview and send your transmissions.
  </p>
</EmptyState>
`;

exports[`renders errors when present 1`] = `
<ApiErrorBanner
  errorDetails="Uh oh! It broke. "
  message="Sorry, we seem to have had some trouble loading your templates."
  reload={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": undefined,
    }
  }
/>
`;

exports[`renders rows correctly with NO subaccounts 1`] = `
Array [
  Array [
    <Name
      id="id3"
      name="no subs template"
      published={true}
    />,
    <Status
      id="id3"
      name="no subs template"
      published={true}
    />,
    <small>
      Aug 10 2017, 10:15am
    </small>,
    <Actions
      id="id3"
      name="no subs template"
      published={true}
    />,
  ],
]
`;

exports[`renders rows correctly with subaccounts 1`] = `
Array [
  Array [
    <Name
      id="id1"
      name="subaccount template"
      published={true}
      subaccount_id={101}
    />,
    <Status
      id="id1"
      name="subaccount template"
      published={true}
      subaccount_id={101}
    />,
    <SubaccountTag
      all={false}
      id={101}
      isDefault={false}
      master={false}
      receiveAll={false}
    />,
    <small>
      Aug 10 2017, 10:15am
    </small>,
    <Actions
      id="id1"
      name="subaccount template"
      published={true}
      subaccount_id={101}
    />,
  ],
  Array [
    <Name
      id="id2"
      name="shared template"
      published={false}
    />,
    <Status
      id="id2"
      name="shared template"
      published={false}
    />,
    <SubaccountTag
      all={true}
      id={null}
      isDefault={false}
      master={false}
      receiveAll={false}
    />,
    <small>
      Aug 10 2017, 10:15am
    </small>,
    <Actions
      id="id2"
      name="shared template"
      published={false}
    />,
  ],
  Array [
    <Name
      id="id3"
      name="master template"
      published={false}
    />,
    <Status
      id="id3"
      name="master template"
      published={false}
    />,
    null,
    <small>
      Aug 10 2017, 10:15am
    </small>,
    <Actions
      id="id3"
      name="master template"
      published={false}
    />,
  ],
]
`;

exports[`renders without primary action for read-only users 1`] = `
<Page
  empty={
    Object {
      "content": <p>
        Build, test, preview and send your transmissions.
      </p>,
      "image": [Function],
      "show": false,
      "title": "Manage your email templates",
    }
  }
  title="Templates"
>
  <TableCollection
    columns={
      Array [
        Object {
          "label": "Name",
          "sortKey": "name",
          "width": "28%",
        },
        Object {
          "label": "Status",
          "sortKey": "published",
          "width": "18%",
        },
        Object {
          "label": "Last Updated",
          "sortKey": "last_update_time",
        },
        null,
      ]
    }
    defaultSortColumn="name"
    defaultSortDirection="asc"
    filterBox={
      Object {
        "exampleModifiers": Array [
          "id",
          "name",
        ],
        "itemToStringKeys": Array [
          "name",
          "id",
          "subaccount_id",
        ],
        "show": true,
      }
    }
    getRowData={[Function]}
    pagination={true}
    rows={
      Array [
        Object {
          "name": "Temp 1",
        },
        Object {
          "name": "Temp 2",
        },
      ]
    }
  />
</Page>
`;
